Review Request 5850 - fixed description not wrapping on enrichments

--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
@@ -537,6 +537,7 @@
         }
         &.list {
             .box-inner {
+                padding-right: 142px;
                 .controls {
                     webkit-flex-direction: column;
                     -ms-flex-direction: column;
